--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,9 +61,9 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
         
-    - name: Check Docker version
-      run: docker version
-      
+    #- name: Check Docker version
+    #  run: docker version
+
     - name: Build Docker image
       run: docker build -t devops-assessment:latest .
 
