edited some steps

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -36,35 +36,38 @@ jobs:
       run: mvn exec:java
     
     - name: Install Docker
-      if: failure()
-      run: |
-        # Update the package index
-        sudo apt-get update
+      uses: docker-practice/actions-setup-docker@master
+      # #if: failure()
+      # run: |
+      #   # Update the package index
+      #   sudo apt-get update
         
-        # Install packages to allow apt to use a repository over HTTPS
-        sudo apt-get install -y \
-            apt-transport-https \
-            ca-certificates \
-            curl \
-            gnupg \
-            lsb-release
+      #   # Install packages to allow apt to use a repository over HTTPS
+      #   sudo apt-get install -y \
+      #       apt-transport-https \
+      #       ca-certificates \
+      #       curl \
+      #       gnupg \
+      #       lsb-release
         
-        # Add Docker's official GPG key
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+      #   # Add Docker's official GPG key
+      #   curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
         
-        # Set up the stable repository
-        echo \
-          "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+      #   # Set up the stable repository
+      #   echo \
+      #     "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+      #     $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         
-        # Install Docker Engine
-        sudo apt-get update
-        sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+      #   # Install Docker Engine
+      #   sudo apt-get update
+      #   sudo apt-get install -y docker-ce docker-ce-cli containerd.io
         
-    #- name: Check Docker version
-    #  run: docker version
+    - name: Check Docker version
+      needs: Install Docker
+      run: docker version
 
     - name: Build Docker image
+      needs: Install Docker
       run: docker build -t devops-assessment:latest .
 
     - name: Save Docker image
