--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,9 +35,19 @@ jobs:
     - name: Run application
       run: mvn exec:java
     
+    - name: Install dpkg
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+             ca-certificates \
+             curl \
+             gnupg \
+             lsb-release \
+             dpkg
+
     - name: Install Docker
      # uses: docker-practice/actions-setup-docker@master
-      #if: failure()
+      if: failure()
       run: |
         # Update the package index
         sudo apt-get update
