--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,7 +44,9 @@ jobs:
              gnupg \
              lsb-release \
              dpkg
+        sudo dpkg --configure -a
         sudo apt-get -f install
+        
 
     - name: Install Docker
      # uses: docker-practice/actions-setup-docker@master
