--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,6 +72,8 @@ jobs:
           $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         
         # Install Docker Engine
+        sudo apt remove docker-ce
+        sudo apt autoremove
         sudo apt-get update
         sudo apt-get install -y -f docker-ce docker-ce-cli containerd.io
         
