--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,61 +35,74 @@ jobs:
     - name: Run application
       run: mvn exec:java
     
-    - name: Install dpkg
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-             ca-certificates \
-             curl \
-             gnupg \
-             lsb-release \
-             dpkg
-        sudo dpkg --configure -a
-        sudo apt-get -f install
+    # - name: Install dpkg
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install -y \
+    #          ca-certificates \
+    #          curl \
+    #          gnupg \
+    #          lsb-release \
+    #          dpkg
+    #     sudo dpkg --configure -a
+    #     sudo apt-get -f install
         
 
-    - name: Install Docker
-     # uses: docker-practice/actions-setup-docker@master
-      if: failure()
-      run: |
-        # Update the package index
-        sudo apt-get update
+    # - name: Install Docker
+    #  # uses: docker-practice/actions-setup-docker@master
+    #   if: failure()
+    #   run: |
+    #     # Update the package index
+    #     sudo apt-get update
         
-        # Install packages to allow apt to use a repository over HTTPS
-        sudo apt-get install -y \
-            apt-transport-https \
-            ca-certificates \
-            curl \
-            gnupg \
-            lsb-release
+    #     # Install packages to allow apt to use a repository over HTTPS
+    #     sudo apt-get install -y \
+    #         apt-transport-https \
+    #         ca-certificates \
+        #     curl \
+        #     gnupg \
+        #     lsb-release
         
-        # Add Docker's official GPG key
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+        # # Add Docker's official GPG key
+        # curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
         
-        # Set up the stable repository
-        echo \
-          "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        # # Set up the stable repository
+        # echo \
+        #   "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+        #   $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         
-        # Install Docker Engine
-        sudo apt remove docker-ce
-        sudo apt autoremove
-        sudo apt-get update
-        sudo apt-get install -y -f docker-ce docker-ce-cli containerd.io
+        # # Install Docker Engine
+        # sudo apt remove docker-ce
+        # sudo apt autoremove
+        # sudo apt-get update
+        # sudo apt-get install -y -f docker-ce docker-ce-cli containerd.io
         
-    - name: Check Docker version
-      # needs: Install Docker
-      run: docker version
+    # - name: Check Docker version
+    #   # needs: Install Docker
+    #   run: docker version
 
-    - name: Build Docker image
-      # needs: Install Docker
-      run: docker build -t devops-assessment:latest .
+    - name: Set up Docker Build Action
+      uses: docker/setup-buildx-action@v2
 
-    - name: Save Docker image
-      run: docker save devops-assessment:latest -o devops-assessmentv1.tar
+    - name: Build image
+      uses: docker/build-push-action@v5
+      with: 
+        context: .
+        tags: devops_assessment:latest
+        push: false
 
-    - name: Upload Docker image to GitHub artifacts
-      uses: actions/upload-artifact@v2
+    - name: Set up python for Ansible
+      uses: actions/setup-python@v4
       with:
-        name: takow-assessment
-        path: devops-assessmentv1.tar
+        python-version: '3.x'
+        
+    - name: Install Ansible Docker Module
+      run: |
+        python -m pip install --upgrade pip
+        pip install ansible docker
+
+    - name: Deploy application with Ansible
+      run:  |
+        ansible-playbook -i iventory ./ansible/deploy.yaml
+      env: 
+        DOCKER_IMAGE_TAG: devops_assessment:latest
