--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -86,11 +86,10 @@ jobs:
     # - name: Check Docker version
     #   # needs: Install Docker
     #   run: docker version
-
-    - name: Set up Docker Build Action
-      uses: docker/setup-buildx-action@v3
     
-
+    - name: Set up Docker
+      uses: crazy-max/ghaction-setup-docker@v3
+    
     - name: Build Docker Image
       run: |
         docker build -t devops_assessment:latest .
@@ -99,21 +98,24 @@ jobs:
         
     - name: Push Docker Image
       run: |
-        docker push my-image
+        docker push devops_assessment:latest
       env:
         DOCKER_HOST: unix:///var/run/docker.sock
+
+    # - name: Set up Docker Build Action
+    #   uses: docker/setup-buildx-action@v3
+
     # - name: Build image
     #   uses: docker/build-push-action@v5
     #   with: 
     #     context: .
     #     tags: devops_assessment:latest
     #     push: false
-    #     env: 
 
-    # - name: Set up python for Ansible
-    #   uses: actions/setup-python@v4
-    #   with:
-    #     python-version: '3.x'
+    - name: Set up python for Ansible
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
         
     - name: Install Ansible Docker Module
       run: |
