--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -91,7 +91,8 @@ jobs:
       run: |
         # Install Docker
         sudo apt-get update
-        sudo apt-get install -y docker.io
+        curl -fsSL https://get.docker.com -o get-docker.sh
+        sudo sh get-docker.sh
         #Add current user to the docker group
         sudo usermod -aG docker $USER
 
