ansible step fix

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,7 +94,7 @@ jobs:
         curl -fsSL https://get.docker.com -o get-docker.sh
         sudo sh get-docker.sh
         #Add current user to the docker group
-        sudo usermod -aG docker $USER
+        #sudo usermod -aG docker $USER
 
     - name: Build Docker Image
       run: |
