--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -115,7 +115,7 @@ jobs:
         sudo apt-get install -y docker-ce docker-ce-cli containerd.io
         
         # Add current user to the docker group
-        sudo usermod -aG docker $USER
+        #sudo usermod -aG docker $USER
         
         # Verify Docker installation
         docker version
