--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -103,8 +103,7 @@ jobs:
     - name: Install Docker
       run: |
         # Add Docker's official GPG key
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-        
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --batch --no-tty --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg        
         # Set up the Docker repository
         echo \
           "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
