--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -102,12 +102,8 @@ jobs:
         
     - name: Install Docker
       run: |
-        # Add Docker's official GPG key
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --batch --no-tty --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg        
-        # Set up the Docker repository
-        echo \
-          "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
         
         # Install Docker
         sudo apt-get update
