ansible step fix

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -111,14 +111,14 @@ jobs:
         
         # Add current user to the docker group
         #sudo usermod -aG docker $USER
-        
+        sudo /etc/init.d/docker start
         # Verify Docker installation
         docker version
         
-    - name: Start Docker Daemon
-      run: |
-        # Start the Docker daemon
-        sudo /etc/init.d/docker start
+    # - name: Start Docker Daemon
+    #   run: |
+    #     # Start the Docker daemon
+    #     sudo /etc/init.d/docker start
 
     # - name: Install Docker
     #   run: |
