ansible step fix

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,38 +87,38 @@ jobs:
     #   # needs: Install Docker
     #   run: docker version
 
-    - name: Install Docker Dependencies
-      run: |
-        # Update package lists
-        sudo apt-get update
-        
-        # Install required dependencies
-        sudo apt-get install -y \
-             apt-transport-https \
-             ca-certificates \
-             curl \
-             gnupg \
-             lsb-release
-        
-    - name: Install Docker
-      run: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-        
-        # Install Docker
-        sudo apt-get update
-        sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-        
-        # Add current user to the docker group
-        #sudo usermod -aG docker $USER
-        sudo /etc/init.d/docker start
-        # Verify Docker installation
-        docker version
-        
-    # - name: Start Docker Daemon
+    # - name: Install Docker Dependencies
     #   run: |
-    #     # Start the Docker daemon
+    #     # Update package lists
+    #     sudo apt-get update
+        
+    #     # Install required dependencies
+    #     sudo apt-get install -y \
+    #          apt-transport-https \
+    #          ca-certificates \
+    #          curl \
+    #          gnupg \
+    #          lsb-release
+        
+    # - name: Install Docker
+    #   run: |
+    #     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+    #     sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+        
+    #     # Install Docker
+    #     sudo apt-get update
+    #     sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+        
+    #     # Add current user to the docker group
+    #     #sudo usermod -aG docker $USER
     #     sudo /etc/init.d/docker start
+    #     # Verify Docker installation
+    #     docker version
+        
+    - name: Start Docker Daemon
+      run: |
+        # Start the Docker daemon
+        sudo /etc/init.d/docker start
 
     # - name: Install Docker
     #   run: |
