--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -145,16 +145,23 @@ jobs:
     #     tags: devops_assessment:latest
     #     push: false
 
-    - name: Check Docker Status
-      run: |
-        # Check if the Docker daemon is running
-        sudo systemctl status docker
+    # - name: Check Docker Status
+    #   run: |
+    #     # Check if the Docker daemon is running
+    #     sudo systemctl status docker
     
-    - name: Build Docker Image
-      run: |
-        # Build the Docker image
-        docker buildx create --name builder --driver docker-container --use
-        docker buildx build -t devops_assessment:latest .
+    # - name: Build Docker Image
+    #   run: |
+    #     # Build the Docker image
+    #     docker buildx create --name builder --driver docker-container --use
+    #     docker buildx build -t devops_assessment:latest .
+
+    - name: Build and Push Container to docker.io
+        uses: GlueOps/github-actions-build-push-containers@v0.3.7
+        with:
+          registry: "docker.io"
+          dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
+          dockerhub_password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Set up python for Ansible
       uses: actions/setup-python@v4
