--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,25 +47,46 @@ jobs:
     #     sudo /etc/init.d/docker start
     #     # Verify Docker installation
     #     docker version
-        
+     
      - name: Start Docker Daemon
        run: |
         # Start the Docker daemon
         sudo /etc/init.d/docker start
+     
+     - name: hello world
+       run: |
+         sudo docker run hello-world
 
+    #  - name: Set up QEMU
+    #    uses: docker/setup-qemu-action@v3
+      
+    #  - name: Set up Docker Buildx
+    #    uses: docker/setup-buildx-action@v3
+      
+    #  - name: Login to Docker Hub
+    #    uses: docker/login-action@v3
+    #    with:
+    #       username: ${{ secrets.DOCKER_USERNAME }}
+    #       password: ${{ secrets.DOCKER_PASSWORD }}
 
-     - name: Build
-       uses: cloudposse/github-action-docker-build-push@main
-       with:
-        registry: registry.hub.docker.com
-        organization: "${{ github.event.repository.owner.login }}"
-        repository: "${{ github.event.repository.name }}"
-        login: "${{ secrets.DOCKER_USERNAME }}"
-        password: "${{ secrets.DOCKER_PASSWORD }}"
+    #  -  name: Build and push
+    #     uses: docker/build-push-action@v6
+    #     with:
+    #       push: true
+    #       tags: takow/devops_assessment:latest
+
+    #  - name: Build
+    #    uses: cloudposse/github-action-docker-build-push@main
+    #    with:
+    #     registry: registry.hub.docker.com
+    #     organization: "${{ github.event.repository.owner.login }}"
+    #     repository: "${{ github.event.repository.name }}"
+    #     login: "${{ secrets.DOCKER_USERNAME }}"
+    #     password: "${{ secrets.DOCKER_PASSWORD }}"
         
-       outputs:
-         image: ${{ steps.build.outputs.image }}
-         tag: ${{ steps.build.outputs.tag }}
+    #    outputs:
+    #      image: ${{ steps.build.outputs.image }}
+    #      tag: ${{ steps.build.outputs.tag }}
 
      - name: Set up python for Ansible
        uses: actions/setup-python@v4
