ansible step fix

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,6 +51,7 @@ jobs:
      - name: Start Docker Daemon
        run: |
         # Start the Docker daemon
+        sudo usermod -aG docker $USER
         sudo /etc/init.d/docker start
      
      - name: hello world
