--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,30 +51,29 @@ jobs:
      - name: Start Docker Daemon
        run: |
         # Start the Docker daemon
-        sudo usermod -aG docker $USER
         sudo /etc/init.d/docker start
      
-     - name: hello world
-       run: |
-         sudo docker run hello-world
+    #  - name: hello world
+    #    run: |
+    #      sudo docker run hello-world
 
-    #  - name: Set up QEMU
-    #    uses: docker/setup-qemu-action@v3
+     - name: Set up QEMU
+       uses: docker/setup-qemu-action@v3
       
-    #  - name: Set up Docker Buildx
-    #    uses: docker/setup-buildx-action@v3
+     - name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v3
       
-    #  - name: Login to Docker Hub
-    #    uses: docker/login-action@v3
-    #    with:
-    #       username: ${{ secrets.DOCKER_USERNAME }}
-    #       password: ${{ secrets.DOCKER_PASSWORD }}
+     - name: Login to Docker Hub
+       uses: docker/login-action@v3
+       with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #  -  name: Build and push
-    #     uses: docker/build-push-action@v6
-    #     with:
-    #       push: true
-    #       tags: takow/devops_assessment:latest
+     -  name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: takow/devops_assessment:latest
 
     #  - name: Build
     #    uses: cloudposse/github-action-docker-build-push@main
